--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Hello</string>
+    <string name="home">Home</string>
+    <string name="login">Login</string>
+    <string name="night_logo">Night Logo</string>
+    <string name="logo">Logo</string>
 </resources>
