--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="home">Home</string>
     <string name="login">Login</string>
+    <string name="an_unknown_error_occurred">An unknown error occurred</string>
 </resources>
