--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,10 @@
     <string name="logo">Logo</string>
     <string name="an_unknown_error_occurred">An unknown error occurred</string>
     <string name="fail_authorized">Password does not match email. </string>
+    <string name="password_visibility">Password Visibility</string>
+    <string name="no_account_yet">No account yet?</string>
+    <string name="register">Register</string>
+    <string name="username">Username</string>
+    <string name="email_address">Email Address</string>
+    <string name="password">Password</string>
 </resources>
