--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="username">Username</string>
     <string name="email_address">Email Address</string>
     <string name="password">Password</string>
+    <string name="profile_image">Profile Image</string>
+    <string name="dropdown_menu">Dropdown Menu</string>
 </resources>
