--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -21,4 +21,5 @@
     <string name="preview_image">Preview Image</string>
     <string name="image_content">Image Content</string>
     <string name="video_content">Video Content</string>
+    <string name="load_items">Load items.</string>
 </resources>
